--- a/README.org
+++ b/README.org
@@ -3,6 +3,8 @@
 Simmer The Toads aims to refine playlists of varying artists and genres to
 gradually transition from various music styles to create a cohesive listening experience.
 
+Link to Asana project: https://app.asana.com/0/1203117920538793/1203117920538793
+
 * Elevator Pitch
 
 ** Why do we want to do this?
