--- a/README.org
+++ b/README.org
@@ -3,9 +3,9 @@
 Simmer The Toads aims to refine playlists of varying artists and genres to
 gradually transition from various music styles to create a cohesive listening experience.
 
-Link to Asana project: https://app.asana.com/0/1203117920538793/1203117920538793 
+[[https://app.asana.com/0/1203117920538793/1203117920538793][Link to Asana project]]
 
-Final Planning Documentation: https://docs.google.com/document/d/15pjyt_XI3FkuYh_ikdXoLbBNePZceG3tsy4lTy3-jgw/edit?usp=sharing   
+[[https://docs.google.com/document/d/1mxL4wcjIboUZs82ka1uiGlvUL_izlJdRB-PtG3yicJk/edit?usp=sharing][Final Planning Documentation]]
 
 * Elevator Pitch
 
